-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.2.0-beta1
-
Windows 10 64 bit
-
d78e87329f9e637de7742cffd167810cc95565cb
- Configure an invalid kit in Creator.
I used a kit which neither has a Qt version nor a compiler. The Options dialog will display a red exclamation mark for this kit. - Open a project which does not have user settings.
Creator reports that no valid kits were found. Still the kit is listed in the bar on the left. - Click on the kit's name in that bar.
Creator will configure the project to use the invalid kit.
I don't think that it makes sense to offer the use of invalid kits.
For Gerrit Dashboard: QTCREATORBUG-17110 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
173766,3 | ProjectExplorer: Filter out unusable kits | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |