src/plugins/projectexplorer/projectwindow.cpp
@@ -234,6 +234,11 @@ public:
     {
         Q_UNUSED(column)
 
+        if (role == ItemUpdatedFromBelowRole) {
+            announceChange();
+            return true;
+        }
+
         if (role == ItemDeactivatedFromBelowRole) {
             announceChange();
             return true;
@@ -375,16 +380,13 @@ public:
                 this, &SelectorModel::openContextMenu);
     }
 
-    void announceChange()
-    {
-        m_changeListener(m_projectsModel.rootItem()->childAt(0)->data(0, PanelWidgetRole).value<QWidget *>());
-    }
-
     void updatePanel()
     {
-        announceChange();
+        ProjectItem *projectItem = m_projectsModel.rootItem()->childAt(0);
+        m_changeListener(projectItem->data(0, PanelWidgetRole).value<QWidget *>());
 
-        QModelIndex activeIndex = m_projectsModel.rootItem()->childAt(0)->activeIndex();
+        QModelIndex activeIndex = projectItem->activeIndex();
+        m_selectorTree->expandAll();
         m_selectorTree->selectionModel()->clear();
         m_selectorTree->selectionModel()->select(activeIndex, QItemSelectionModel::Select);
     }
